Se añade el reset al style.css

--- a/css/style.css
+++ b/css/style.css
@@ -25,4 +25,68 @@
     --primary-yellow: #FFCC00;
     --primary-black: #231900;
     --second-white: #FFFFFF;
+    --font: Libre-Franklin, sans-serif;
+}
+
+/* **************** Reset **************** */
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: var(--font);
+    font-size: 16px;
+    overflow-x: hidden;
+    color: var(--second-white);
+}
+
+img,
+picture,
+video,
+iframe,
+figure {
+    max-width: 100%;
+    width: 100%;
+    display: block;
+}
+
+a {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+    font-size: inherit;
+}
+
+p a {
+    display: inline;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span,
+a,
+strong,
+blockquote,
+i,
+b,
+u,
+em {
+    margin: 0;
+    font-size: 1em;
+    font-weight: inherit;
+    font-style: inherit;
+    text-decoration: none;
+    color: inherit;
 }
