--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,10 @@ svg {
     box-shadow: 0px 2px 13px 2px rgba(30, 30, 30, 0.62);
 }
 
+.card:hover .card__img {
+    transform: scale(1.2);
+}
+
 .card__header {
     width: 100%;
     height: 240px;
@@ -257,6 +261,7 @@ svg {
     border-top-right-radius: 16px;
     object-fit: cover;
     object-position: bottom;
+    transition: 0.5s;
 }
 
 /* .card__body {
@@ -306,6 +311,70 @@ svg {
     background-color: var(--first-color);
 }
 
+/*? ********** Slider Products ********** ¿*/
+.slider {
+    display: flex;
+    gap: 1rem;
+    overflow-x: scroll;
+    scroll-behavior: smooth;
+    scroll-snap-type: x mandatory;
+}
+
+.slider__slide {
+    position: relative;
+    scroll-snap-align: start;
+    min-width: 240px;
+    min-height: 240px;
+    overflow: hidden;
+    margin: 0;
+    background-color: var(--second-color);
+    transition: 0.3s;
+}
+
+.slider__img {
+    /* width: inherit; */
+    height: 100%;
+    object-fit: cover;
+}
+
+.slider__slide:hover .slider__img {
+    opacity: 0.4;
+}
+
+.slider__hover {
+    z-index: 8;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.3s;
+}
+
+.slider__slide:hover .slider__hover {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.slider__title {
+    text-align: center;
+    color: var(--first-color);
+}
+
+.slider__btn {
+    transform: translateY(50%);
+}
+
+.slider__slide:hover .slider__btn {
+    transform: translateY(0);
+}
 
 /* ************** Utilities ************** */
 .container_max-width {
