--- a/css/components/menu.css
+++ b/css/components/menu.css
@@ -61,6 +61,8 @@
     background-color: var(--first-color);
 }
 
+
+
 .category .icons {
     width: inherit;
     height: inherit;
@@ -76,6 +78,12 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+
+.category__type--active {
+    font-weight: var(--font-bold);
+}
+
 
 /* ************** Utilities ************** */
 
