--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,35 @@
 /* ********** Custom Properties ********** */
 @font-face {
     font-family: Libre-Franklin;
-    src: url(/assets/fonts/LibreFranklin-Regular.ttf);
+    src: url(../assets/fonts/LibreFranklin-Regular.ttf);
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: Libre-Franklin;
-    src: url(/assets/fonts/LibreFranklin-SemiBold.ttf);
+    src: url(../assets/fonts/LibreFranklin-SemiBold.ttf);
     font-weight: 600;
     font-style: normal;
 }
 
 @font-face {
     font-family: Libre-Franklin;
-    src: url(/assets/fonts/LibreFranklin-SemiBoldItalic.ttf);
+    src: url(../assets/fonts/LibreFranklin-SemiBoldItalic.ttf);
     font-weight: 600;
     font-style: italic;
 }
 
 @font-face {
     font-family: Libre-Franklin;
-    src: url(/assets/fonts/LibreFranklin-BoldItalic.ttf);
+    src: url(../assets/fonts/LibreFranklin-BoldItalic.ttf);
     font-weight: 700;
     font-style: italic;
 }
 
 @font-face {
     font-family: Libre-Franklin;
-    src: url(/assets/fonts/LibreFranklin-Bold.ttf);
+    src: url(../assets/fonts/LibreFranklin-Bold.ttf);
     font-weight: 700;
     font-style: normal;
 }
