--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
 /* ********** Custom Properties ********** */
 @font-face {
     font-family: Libre-Franklin;
+    src: url(../assets/fonts/LibreFranklin-Light.ttf);
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Libre-Franklin;
     src: url(../assets/fonts/LibreFranklin-Regular.ttf);
     font-weight: 400;
     font-style: normal;
@@ -43,6 +50,7 @@
     --white-alpha-color: rgba(255, 255, 255, 0.5);
 
     --font: Libre-Franklin, sans-serif;
+    --font-light: 300;
     --font-regular: 400;
     --font-medium: 500;
     --font-semi-bold: 600;
@@ -155,7 +163,7 @@ svg {
     -webkit-tap-highlight-color: transparent;
 }
 
-/* ************** Components ************* */
+/* ************* Components ************* */
 
 /*? ********** Header ********** ¿*/
 
@@ -275,13 +283,12 @@ svg {
     background-image: var(--hero-image-url);
     background-attachment: var(--hero-attachment);
     background-repeat: no-repeat;
+    background-image: linear-gradient(var(--hero-opacity-color), var(--hero-opacity-color)), var(--hero-image-url);
     background-size: cover;
     background-position: center;
 }
 
-.hero-img_opacity {
-    background-image: linear-gradient(var(--hero-opacity-color), var(--hero-opacity-color)), var(--hero-image-url);
-}
+.hero-img_opacity {}
 
 /*? ********** Modal ********** ¿*/
 
@@ -767,13 +774,45 @@ svg {
     margin-bottom: 1rem;
 }
 
-/* ************* Site Styles ************* */
+.text-center {
+    text-align: center;
+}
 
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+@media screen and (min-width: 1024px) {
+    .full-lg-screen {
+        width: 100%;
+        min-height: 100vh;
+    }
+
+    .text-lg-center {
+        text-align: center;
+    }
+
+    .text-lg-left {
+        text-align: left;
+    }
+
+    .text-lg-right {
+        text-align: right;
+    }
+}
+
+/* ************* Site Styles ************* */
 
 .main {
     width: 100vw;
     height: auto;
 }
+
+/*? ********** Home ********** ¿*/
 
 .home {
     display: flex;
@@ -783,7 +822,6 @@ svg {
     height: calc(100vh - var(--header-height));
     background-color: var(--first-color);
 }
-
 
 .home__text_sm {
     font-size: 7.5vw;
@@ -875,6 +913,9 @@ svg {
     }
 }
 
+
+/*? ********** Products ********** ¿*/
+
 .products {
     background: var(--third-color);
 }
@@ -887,27 +928,47 @@ svg {
     margin-top: 1rem;
 }
 
+.products__title {
+    color: var(--first-color);
+    margin-bottom: 0.5rem;
+}
+
+/*? ********** About ********** ¿*/
+
 .about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: auto;
-    height: auto;
+    height: 100vh;
 }
 
 .about__container {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     gap: 0.875rem;
+    padding: 1rem;
 }
 
-.about__span {
-    font-weight: var(--font-semi-bold);
-    font-style: italic;
-    font-size: 1.625rem;
+.about .section__title {
+    color: var(--third-color);
+    text-align: center;
+    font-size: 2rem;
 }
 
 .about__paragraph {
-    font-weight: var(--font-semi-bold);
+    font-weight: 200;
     font-style: normal;
-    text-align: left;
+    color: var(--third-color);
+    text-align: center;
+}
+
+/*? ********** Contact ********** ¿*/
+
+.contact {
+    background-color: var(--second-color);
 }
 
 .contact__info {
@@ -921,13 +982,31 @@ svg {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 0.5em;
+    gap: 1em;
     padding: 8px;
-    border-radius: 16px;
-    box-shadow: var(--box-shadow);
+    /* border-radius: 16px;
+    box-shadow: var(--box-shadow); */
 }
 
-.contact__subtitle {
+.contact__contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact__items h2,
+.contact__items h3,
+.contact__items h4,
+.contact__contacts h4 {
+    color: var(--third-color);
+}
+
+.contact__contacts h4 {
+    font-weight: var(--font-light);
+}
+
+.contact__items .text-center {
     margin-bottom: 0;
 }
 
@@ -936,6 +1015,7 @@ svg {
 }
 
 .contact__icons {
+    fill: var(--third-color);
     width: 40px;
     height: 40px;
     margin-bottom: 0.5rem;
@@ -945,6 +1025,8 @@ svg {
     display: flex;
     gap: 1rem;
 }
+
+/*? ********** Footer ********** ¿*/
 
 .footer {
     font-size: 75%;
@@ -963,6 +1045,7 @@ svg {
 
 @media screen and (min-width: 1024px) {
 
+    /* ************ Header ************ */
     .header {
         align-items: center;
         position: sticky;
@@ -1039,7 +1122,7 @@ svg {
         display: none;
     }
 
-    /* home */
+    /* ************ Home ************ */
     .home {
         flex-direction: row;
     }
@@ -1066,6 +1149,71 @@ svg {
         transform: scaleX(-1); */
     }
 
+    /* ************ Products ************ */
+
+    .products.section_padding {
+        padding-top: calc(var(--header-height) - 0.5rem);
+        padding-bottom: 0;
+    }
+
+    /* ************ Slider Products ************ */
+    .slider {
+        overflow-x: hidden;
+    }
+
+    .slider__slide {
+        min-width: 160px;
+        max-height: 160px;
+    }
+
+    /* ************ About ************ */
+    .about {}
+
+    .about__container {
+        height: 60vh;
+        padding: 3rem;
+    }
+
+    .about__paragraph {
+        width: 70vw;
+    }
+
+    /*? ********** Contact ********** ¿*/
+
+    .contact__info {
+        display: grid;
+        grid-template-columns: repeat(3, 30%);
+        justify-content: space-between;
+    }
+
+    .contact__items {
+        justify-content: flex-start;
+    }
+
+    .contact__logo {
+        display: flex;
+        justify-content: center;
+    }
+
+    .contact__logo img {
+        width: 160px;
+        height: 160px;
+    }
+
+    .contact__contacts {
+        width: 100%;
+        gap: 1rem;
+        font-size: 0.8rem;
+        flex-direction: row;
+        justify-content: flex-start;
+    }
+
+    .contact__icons {
+        width: 2rem;
+        height: 2rem;
+    }
+
+    /*? ********** Footer ********** ¿*/
     .footer {
         margin-bottom: 0;
     }
